p2/app3.yaml
# -----------------------------------------------------------------------------
# App3 Deployment + Service
# - Acts as the "default" app (when Host doesn't match app1.com or app2.com)
# -----------------------------------------------------------------------------
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app3
  namespace: webapps
spec:
  replicas: 1
  selector:
    matchLabels: { app: app3 }
  template:
    metadata:
      labels: { app: app3 }
    spec:
      containers:
        - name: echo
          image: docker.io/ealen/echo-server:latest
          ports:
            - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: app3
  namespace: webapps
spec:
  selector: { app: app3 }
  ports:
    - name: http
      port: 80
      targetPort: 80
